Refactor Network and Session Management; Update Top Bar and HomeScreen
- Removed unused files related to previous network setup (ApiService, Artist, ArtistRepository, RetrofitInstance, User).
- Introduced a new network module for dependency injection of network services.
- Created `ApiResult` sealed interface and `NetworkError` enum for handling API responses.
- Implemented `safeApiCall` and `responseToResult` functions for safer API calls.
- Added `AuthService` for handling authentication-related API calls (login, silent login, logout).
- Added request and response models (`LoginData`, `LoginResponse`, `LogoutResponse`, `SilentLoginResponse`, `FavoriteArtist`).
- Created `SessionStoragePreferences` to handle storing and retrieving session data.
- Created `ArtsyApplication` class to provide network dependencies.
- Updated `HomeScreenViewModel` to validate session cookie on initialization, handle login and logout actions.
- Implemented displaying the user's image in the Top Bar if available.
- Updated `TopBar` to:
  - Support displaying a user profile image.
  - Add a logout dropdown menu option.
  - Navigate to the user's profile on user click (if logged in).
- Updated `FavoriteArtistListItem` to display more artist details.
- Updated `AndroidManifest.xml` to include the `INTERNET` permission and set the custom application class name.
- Updated Gradle dependencies to include network-related libraries (Retrofit, OkHttp, Kotlinx Serialization, Coil, persistent-cookie-jar).
- Updated `settings.gradle.kts` to add jitpack to repositories.
- Added `HttpClientExt` to handle safeApiCall and responseToResult functions.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ retrofit = "2.11.0"
 retofit-kotlinx-serialization-converter = "1.0.0"
 loggingInteceptor = "4.12.0"
 coilOkHttp = "3.1.0"
+splashScreen = "1.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,7 +43,7 @@ persistent-cookie-jar = { group = "com.github.franmontiel", name = "PersistentCo
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-kotlinx-serialization-converter = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "retofit-kotlinx-serialization-converter" }
 http-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "loggingInteceptor" }
-
+splash-screen = {group = "androidx.core", name = "core-splashscreen", version.ref = "splashScreen"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
